# tg-shazam-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
src/shazam_bot/: __main__.py  bot.py  config.py  download.py  formatting.py  recognize.py
tests/: test_download.py  test_recognize.py
