[project]
name = "shazam-bot"
version = "0.1.0"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "aiogram>=3",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "yt-dlp[default]",
    "shazamio>=0.8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shazam_bot"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "ruff>=0.15.18",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true
allow_redefinition_new = true
local_partial_types = true
follow_untyped_imports = true
plugins = ["pydantic.mypy"]
